force-app/main/default/objects/Task_Wrapper__c/Task_Wrapper__c.object-meta.xml
<CustomObject>
    <label>Task Wrapper</label>
    <nameField>
        <displayFormat>TW-{000000}/{YYYY}</displayFormat>
        <label>Task Wrapper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Wrappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>