force-app/main/default/objects/Task_Wrapper__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Task Wrappers</relationshipLabel>
    <relationshipName>Task_Wrappers</relationshipName>
    <type>Lookup</type>
</CustomField>