force-app/main/default/objects/Task_Wrapper__c/fields/Follow_up_description__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_description__c</fullName>
    <label>Follow up description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>