force-app/main/default/objects/Task_Wrapper__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>clBBC</fullName>
            </value>
            <value>
                <fullName>clGGT</fullName>
            </value>
            <value>
                <fullName>clJOBQ</fullName>
            </value>
            <value>
                <fullName>clCAS</fullName>
            </value>
            <value>
                <fullName>clMEET</fullName>
            </value>
            <value>
                <fullName>canQ</fullName>
            </value>
            <value>
                <fullName>canCAS</fullName>
            </value>
            <value>
                <fullName>Obj No recr</fullName>
            </value>
            <value>
                <fullName>Obj PSL</fullName>
            </value>
            <value>
                <fullName>Obj Other</fullName>
            </value>
            <value>
                <fullName>Schedule: date &amp; time</fullName>
            </value>
            <value>
                <fullName>clCheck</fullName>
            </value>
            <value>
                <fullName>canCheck</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>